--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+body {
+    overflow: hidden;
+}
+
 .drop {
     width: 80vw;
-    height: 600px;
+    height: 500px;
     margin: 20px auto;
     border: 2px solid black;
     border-radius: 20px;
@@ -8,7 +12,7 @@
 
 .drag {
     width: 80vw;
-    height: 200px;
+    height: 150px;
     margin: 20px auto;
     border: 1px solid black;
     display: flex;
